# Elastic-Rose

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bench/: CMakeLists.txt  bench.hpp  bloom.hpp  filter.hpp  filter_bloom.hpp  filter_elastic_bf.hpp  filter_elastic_rosetta.hpp  filter_factory.hpp  filter_rosetta.hpp  filter_surf.hpp  first-test.txt  run.sh  workload.cpp  workload_multi_thread.cpp  workload_u64.cpp
include/: Makefile  bitvec.hpp  config.hpp  configuration.hpp  elastic_bf.hpp  elastic_rosetta.hpp  hash.hpp  lib.hpp  rosetta.hpp  rosetta_test.cpp
include/new/: bloom_filter.hpp  elastic_bf.hpp  elastic_rosetta.hpp  rosetta.hpp
src/: CMakeLists.txt
test/: CMakeLists.txt  bf_test.cpp  bitvec_test.cpp  elastic_rosetta_test.cpp  elasticbf_test.cpp  filter_size_test.cpp  hash_test.cpp  new_rosetta_test.cpp  rosetta_test.cpp  string_test.cpp  vec_test.cpp
