add_executable(rosetta_test rosetta_test.cpp)
add_executable(hash_test hash_test.cpp)
add_executable(bf_test bf_test.cpp)
add_executable(vec_test vec_test.cpp)
add_executable(string_test string_test.cpp)
add_executable(elasticbf_test elasticbf_test.cpp)
add_executable(elastic_rosetta_test elastic_rosetta_test.cpp)
add_executable(new_rosetta_test new_rosetta_test.cpp)
